Fix caps lock key only having key down event

Changes:
Move caps lock key handling from accelerator controller to
event_rewriter_chromeos.cc. As an accelerator key, caps lock is always
consumed before it is sent to web app (e.g. CRD) or browser tab
(keyboard event viewer). So we handle it in event rewriter and do not
stop propagating it.

BUG=775743

Change-Id: Ib3eb29cb4be023142b0d402d7c56015a7197bc14